--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <!-- swiper js -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" </head>
@@ -251,11 +258,13 @@
                 </div>
                 <div class="part">
                     <h2><span class="big">300</span> Professors</h2>
-                    <h6>Lorem, ipsum dolor sit amet <br> consectetur adipisicing elit. <br> Fugiat tempore dolore debitis <br> minus perferendis harum.</h6>
+                    <h6>Lorem, ipsum dolor sit amet <br> consectetur adipisicing elit. <br> Fugiat tempore dolore
+                        debitis <br> minus perferendis harum.</h6>
                 </div>
                 <div class="part">
                     <h2><span class="big">70</span>Faculty</h2>
-                    <h6>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. <br> Accusamus delectus voluptas unde, <br>doloribus perferendis a!</h6>
+                    <h6>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. <br> Accusamus delectus voluptas
+                        unde, <br>doloribus perferendis a!</h6>
                 </div>
             </div>
             <div class="page5div2">
@@ -279,7 +288,100 @@
 
 
         </div>
+        <div class="page6">
+            <div class="row1">
+                <div class="part1">
+                    <h1>research & <br>publication</h1>
+                </div>
+                <div class="part2">
+                    <p>Lorem ipsum dolor sit, amet consectetur <br>adipisicing elit. Explicabo quisquam inventore
+                        soluta?</p>
+                </div>
+            </div>
+            <div class="row2">
+                <div class="owl-carousel owl-theme">
+                    <div class="item">
+                        <div class="contain-img">
+                            <img src="https://plus.unsplash.com/premium_photo-1669562725515-5a63ae6c8ebc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8"
+                                alt="">
+                        </div>
+                        <div class="textdiv">
+                            <span>demo <br>heading</span>
+                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic odio, atque
+                                quisquam
+                                possimus sint.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="contain-img">
+                            <img src="https://plus.unsplash.com/premium_photo-1669562725515-5a63ae6c8ebc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8"
+                                alt="">
+                        </div>
+                        <div class="textdiv">
+                            <span>demo <br>heading</span>
+                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic odio, atque
+                                quisquam
+                                possimus sint.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="contain-img">
+                            <img src="https://plus.unsplash.com/premium_photo-1669562725515-5a63ae6c8ebc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8"
+                                alt="">
+                        </div>
+                        <div class="textdiv">
+                            <span>demo <br>heading</span>
+                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic odio, atque
+                                quisquam
+                                possimus sint.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="contain-img">
+                            <img src="https://plus.unsplash.com/premium_photo-1669562725515-5a63ae6c8ebc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8"
+                                alt="">
+                        </div>
+                        <div class="textdiv">
+                            <span>demo <br>heading</span>
+                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic odio, atque
+                                quisquam
+                                possimus sint.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="contain-img">
+                            <img src="https://plus.unsplash.com/premium_photo-1669562725515-5a63ae6c8ebc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8"
+                                alt="">
+                        </div>
+                        <div class="textdiv">
+                            <span>demo <br>heading</span>
+                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic odio, atque
+                                quisquam
+                                possimus sint.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="contain-img">
+                            <img src="https://plus.unsplash.com/premium_photo-1669562725515-5a63ae6c8ebc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8"
+                                alt="">
+                        </div>
+                        <div class="textdiv">
+                            <span>demo <br>heading</span>
+                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic odio,quisquam<br>possimus sint.</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+            integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+            integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="script.js"></script>
 </body>
 
