--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div data-scroll data-scroll-direction="horizontal " data-scroll-speed="3" class="heading">
                     <div class="elem">
                         <h1>learn from the coolest <br>education platfrom <br> of the india</h1>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Error alias odio, quia ipsa vero iusto inventore officia id eum culpa.</p>
+                        <p>“The function of education is to teach one to think intensively and to think critically. <br> Intelligence plus character –– that is the goal of true education.” – Dr. Martin Luther King Jr.</p>
                         <button>explore now</button>
                     </div>
                 </div>
@@ -84,6 +84,7 @@
 
             </div>
             <div class="back">
+                <img src="https://images.unsplash.com/20/cambridge.JPG?q=80&w=2647&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                 <img src="https://images.unsplash.com/photo-1714756123393-929709970fdb?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMnx8fGVufDB8fHx8fA%3D%3D"
                     alt="">
                 <img src="https://images.unsplash.com/photo-1715257742105-b4f626ce3c2d?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
@@ -103,21 +104,25 @@
             <div class="row2">
                 <div class="col1 image-containerfor-row2"></div>
                 <div class="col2 image-containerfor-row2">
-                    <div class="imgdets"><h1>hello</h1></div>
+                    <div class="imgdets"><h1>What does university <br>teach us?</h1>
+                    <p>However, college life teaches you to love you more and give importance to the areas that make you happy. And the best part among that is following your passions. Rather than sticking to your comfort zone, the campus life gives the spark to always try something new in life.</p></div>
                     <img src="https://plus.unsplash.com/premium_photo-1681248156422-c01a2c803588?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y2xhc3Nyb29tfGVufDB8fDB8fHww"
                         alt=""></div>
                 <div class="col3 image-containerfor-row2">
-                    <div class="imgdets"><h1>hello</h1></div><img
+                    <div class="imgdets"><h1>What is the importance of <br>the campus?</h1>
+                    <p>The Importance Of Having A Good School Campus. If schooling is important, so is the school campus and its surroundings. " School is a building with four walls which has tomorrow inside," is a frequently quoted one-line saying about schools. That said, any space or place can be used to impart knowledge.</p></div><img
                         src="https://images.unsplash.com/photo-1577985043696-8bd54d9f093f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FtcHVzfGVufDB8fDB8fHww"
                         alt=""></div>
             </div>
             <div class="row3 ">
                 <div class="col1 image-containerfor-row2">
-                    <div class="imgdets"><h1>hello</h1></div><img
+                    <div class="imgdets"><h1>Why is it important to have <br>a degree?</h1>
+                    <p>Research suggests that: Graduates enjoy higher quality jobs than non-graduates. Graduates enjoy better health outcomes, by being less likely to smoke, more likely to exercise, and less prone to depression.</p></div><img
                         src="https://plus.unsplash.com/premium_photo-1682974403683-591557aa631b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZGVncmVlJTIwaW4lMjBjb2xsZWdlfGVufDB8fDB8fHww"
                         alt=""></div>
                 <div class="col2 image-containerfor-row2">
-                    <div class="imgdets"><h1>hello</h1></div><img
+                    <div class="imgdets"><h1>Why is the library important <br>in university?</h1>
+                    <p>Libraries serve as knowledge reservoirs by holding substantial collections of books, periodicals, research papers, and other academic materials. They give instructors and students access to a wide range of data that is essential for self-improvement, research, and coursework.</p></div><img
                         src="https://images.unsplash.com/photo-1544640808-32ca72ac7f37?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGNsYXNzcm9vbXxlbnwwfHwwfHx8MA%3D%3D"
                         alt=""></div>
                 <div class="col3 image-containerfor-row2"></div>
@@ -262,19 +267,18 @@
             <div class="page5div1">
                 <div class="part">
                     <h2><span class="big"> <span id="num1">00</span>k</span>students</h2>
-                    <h6>At Present,There are Five Departments <br> within the Faculty: Departmetnt of <br> geography
-                        and enviroment
+                    <h6>At Present,There are 10k+ Students  <br> study in our university <br> and All Students are Very Happy with us!
                     </h6>
                 </div>
                 <div class="part">
                     <h2><span class="big" id="num2">000</span> Professors</h2>
-                    <h6>Lorem, ipsum dolor sit amet <br> consectetur adipisicing elit. <br> Fugiat tempore dolore
-                        debitis <br> minus perferendis harum.</h6>
+                    <h6>At Present,There are 300+ Professors  <br> are avialable to provide best content for the Students <br> and All Professors are well qulified!
+                    </h6>
                 </div>
                 <div class="part">
                     <h2><span class="big" id="num3">00</span>Faculty</h2>
-                    <h6>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. <br> Accusamus delectus voluptas
-                        unde, <br>doloribus perferendis a!</h6>
+                    <h6>At Present,There are 70+ Faculty  <br> are avialable for the Students. Therefore they <br> Choice there faculty according to their dreem. 
+                    </h6>
                 </div>
             </div>
             <div class="page5div2">
@@ -284,8 +288,7 @@
                 <div class="part2">
                     <h1 data-scroll data-scroll-direction="horizontal " data-scroll-speed="2">university is the <br> best time of your <br>life</h1>
                     <h6>
-                        Lorem, ipsum dolor sit amet <br>consectetur adipisicing elit. Delectus rem excepturi <br>ad
-                        nulla mollitia amet!
+                        “You can’t just sit there and wait for people to give you that golden dream. You’ve got to get out there and make it happen for yourself.” —Diana Ross
                     </h6>
                 </div>
             </div>
@@ -304,15 +307,14 @@
                     <h1>research & <br>publication</h1>
                 </div>
                 <div class="part2">
-                    <p>Lorem ipsum dolor sit, amet consectetur <br>adipisicing elit. Explicabo quisquam inventore
-                        soluta?</p>
+                    <p>“No research without action, no action without research”</p>
                 </div>
             </div>
             <div class="row2">
                 <div class="owl-carousel owl-theme">
                     <div class="item">
                         <div class="contain-img">
-                            <img src="https://plus.unsplash.com/premium_photo-1669562725515-5a63ae6c8ebc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8"
+                            <img src="https://images.unsplash.com/photo-1605290975464-72d2acef7d4a?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                                 alt="">
                         </div>
                         <div class="textdiv">
@@ -324,7 +326,7 @@
                     </div>
                     <div class="item">
                         <div class="contain-img">
-                            <img src="https://plus.unsplash.com/premium_photo-1669562725515-5a63ae6c8ebc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8"
+                            <img src="https://images.unsplash.com/photo-1578496479914-7ef3b0193be3?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                                 alt="">
                         </div>
                         <div class="textdiv">
@@ -336,7 +338,7 @@
                     </div>
                     <div class="item">
                         <div class="contain-img">
-                            <img src="https://plus.unsplash.com/premium_photo-1669562725515-5a63ae6c8ebc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8"
+                            <img src="https://images.unsplash.com/photo-1568158535468-8d9d46817c69?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                                 alt="">
                         </div>
                         <div class="textdiv">
@@ -348,7 +350,7 @@
                     </div>
                     <div class="item">
                         <div class="contain-img">
-                            <img src="https://plus.unsplash.com/premium_photo-1669562725515-5a63ae6c8ebc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8"
+                            <img src="https://plus.unsplash.com/premium_photo-1661645223527-bdb11aad9030?q=80&w=2369&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                                 alt="">
                         </div>
                         <div class="textdiv">
@@ -360,7 +362,7 @@
                     </div>
                     <div class="item">
                         <div class="contain-img">
-                            <img src="https://plus.unsplash.com/premium_photo-1669562725515-5a63ae6c8ebc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8"
+                            <img src="https://images.unsplash.com/photo-1598026873048-9f7aedde8169?q=80&w=2371&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                                 alt="">
                         </div>
                         <div class="textdiv">
@@ -372,7 +374,7 @@
                     </div>
                     <div class="item">
                         <div class="contain-img">
-                            <img src="https://plus.unsplash.com/premium_photo-1669562725515-5a63ae6c8ebc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8"
+                            <img src="https://images.unsplash.com/photo-1598043596827-fd992a2f137a?q=80&w=2372&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                                 alt="">
                         </div>
                         <div class="textdiv">
@@ -402,7 +404,7 @@
                             <div class="item myui">
                                 <div class="myyrow1">
                                     <div class="part-1">
-                                        <img src="./image/img3.jpg" alt="">
+                                        <img src="https://images.unsplash.com/photo-1577880216142-8549e9488dad?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                                     </div>
                                     <div class="part2">
                                         <i class="fa-solid fa-star"></i>
@@ -423,7 +425,7 @@
                             <div class="item myui">
                                 <div class="myyrow1">
                                     <div class="part-1">
-                                        <img src="./image/img3.jpg" alt="">
+                                        <img src="https://plus.unsplash.com/premium_photo-1693258698597-1b2b1bf943cc?q=80&w=2487&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                                     </div>
                                     <div class="part2">
                                         <i class="fa-solid fa-star"></i>
@@ -444,7 +446,49 @@
                             <div class="item myui">
                                 <div class="myyrow1">
                                     <div class="part-1">
-                                        <img src="./image/img3.jpg" alt="">
+                                        <img src="https://plus.unsplash.com/premium_photo-1687485794296-68f0d6e934bb?q=80&w=2487&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                                    </div>
+                                    <div class="part2">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                        <h5>Uttam Utkarsh</h5>
+                                        <h6>Student</h6>
+                                    </div>
+
+                                </div>
+                                <div class="row2">
+                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus porro nostrum
+                                        placeat laudantium corrupti ullam.</p>
+                                </div>
+                            </div>
+                            <div class="item myui">
+                                <div class="myyrow1">
+                                    <div class="part-1">
+                                        <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?q=80&w=2561&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                                    </div>
+                                    <div class="part2">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                        <h5>Uttam Utkarsh</h5>
+                                        <h6>Student</h6>
+                                    </div>
+
+                                </div>
+                                <div class="row2">
+                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus porro nostrum
+                                        placeat laudantium corrupti ullam.</p>
+                                </div>
+                            </div>
+                            <div class="item myui">
+                                <div class="myyrow1">
+                                    <div class="part-1">
+                                        <img src="https://plus.unsplash.com/premium_photo-1689565611422-b2156cc65e47?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                                     </div>
                                     <div class="part2">
                                         <i class="fa-solid fa-star"></i>
